# Loupe-UX-Server

./: .gitignore  .gitmodules  README.md
.github/workflows/: publish Loupe UX Server Linux.yml  publish Loupe UX Server Win32.yml  publish Loupe UX Server.yml  publish webhmi.yml
example/AdsDataSource/: CMakeLists.txt  README.md  server.cpp
example/AsProject/: README.md
example/HMI/: README.md  index.html  package-lock.json  package.json  tmplits.json
example/HMI/app/: package-lock.json  tmplits.json
example/HMI/app/pages/: main.handlebars  testPage1.handlebars
example/HMI/app/src/: InitCyclicReads.js  app.js
example/HMI/public/src/: app.js
example/HMI/public/views/: main.handlebars  nav.handlebars  testPage1.handlebars
example/TwinCat/: TwinCat.sln
example/TwinCat/TwinCat/: TwinCat.tsproj
example/TwinCat/TwinCat/PLC1/: PLC1.plcproj  PlcTask.TcTTO
example/TwinCat/TwinCat/PLC1/DUTs/: ITestInterface.TcIO  TestFub.TcPOU  TestFubI.TcPOU  TestStructure.TcDUT
example/TwinCat/TwinCat/PLC1/GVLs/: GVL.TcGVL
example/TwinCat/TwinCat/PLC1/POUs/: MAIN.TcPOU
example/TwinCat/TwinCat/_Config/PLC/: PLC1.xti
src/: package.json
src/HMI/: README.md
src/LuxServer/: CMakeLists.txt  Docker-compose.yml  Dockerfile  buildDocker.bat  configuration.json  start.bat  vcpkg.json
src/LuxServer/include/: AdsDef.h  AdsExtension.h  crow_all.h
src/LuxServer/lib/release/: ads.lib
src/LuxServer/src/: CMakeLists.txt
src/LuxServer/src/DataSource/: CMakeLists.txt  datasrc.h
src/LuxServer/src/DataSource/ADS/: AdsExtension.h  AdsRpc.h  CMakeLists.txt  DataParser.cpp  DataParser.h  DataSource.cpp  DataSource.h  DataSource_impl.cpp  DataSource_impl.h  SymbolParser.cpp  SymbolParser.h
src/LuxServer/src/DataSource/ADS/ads/: AdsDef.cpp  AdsLib.h  AmsRouter.h  Frame.cpp  Log.cpp  Sockets.cpp
src/LuxServer/src/DataSource/ADS/ads/TwinCAT/: AdsDef.h  AdsLib.cpp
src/LuxServer/src/DataSource/ADS/ads/bhf/: ParameterList.cpp
src/LuxServer/src/DataSource/ADS/ads/standalone/: AdsDef.h  AdsLib.cpp  AmsConnection.cpp  AmsNetId.cpp  AmsPort.cpp  AmsRouter.cpp  NotificationDispatcher.cpp
src/LuxServer/src/DataSource/ADS/test/: test.cpp
src/LuxServer/src/jsonserver/: CMakeLists.txt  jsonserver.cpp  jsonserver.h
src/LuxServer/src/server/: CMakeLists.txt  server.cpp
src/LuxServer/src/server/example/: server.cpp
src/LuxServer/src/utils/: CMakeLists.txt  util.cpp  util.h
src/WebHMIServer/: CMakeLists.txt  configuration.json  vcpkg.json
src/WebHMIServer/include/: util.h
src/WebHMIServer/src/: CMakeLists.txt
src/WebHMIServer/src/DataSource/: CMakeLists.txt  datasrc.h
src/WebHMIServer/src/DataSource/ADS/: AdsParseSymbols.cpp  AdsParseSymbols.h  CMakeLists.txt  DataParser.cpp  DataParser.h  DataSource.cpp  DataSource.h  DataSource_impl.cpp  DataSource_impl.h  SymbolParser.cpp  SymbolParser.h  adsdatasrc.cpp  adsdatasrc.h  adsdatasrc_impl.cpp  adsdatasrc_impl.h  adsparser.cpp  adsparser.h
src/WebHMIServer/src/DataSource/sim/: CMakeLists.txt  adsdatasrc.cpp  adsdatasrc.h
src/WebHMIServer/src/jsonserver/: jsonserver.cpp  jsonserver.h
src/WebHMIServer/src/server/: CMakeLists.txt  server.cpp
src/WebHMIServer/src/utils/: CMakeLists.txt  util.cpp
src/libName/: README.md
src/taskName/: README.md
